--- a/nodes/config.html
+++ b/nodes/config.html
@@ -1,222 +1,235 @@
 <script type="text/javascript">
-  RED.nodes.registerType('midea-hvac-config', {
-    category: 'config',
-    defaults: {
-      name: {},
-      method: { value: 'serialbridge' },
-      shost: { value: '', },
-      sport: { value: 23, validate: RED.validators.number() },
-      chost: { value: '' },
-      cport: { value: 6444, validate: RED.validators.number() },
-      polling: { value: 60, validate: RED.validators.number() },
-    },
-    credentials: {
-      username: { type: 'text' },
-      password: { type: 'password' },
-      id: { type: 'text' },
-      key: { type: 'text' },
-      token: { type: 'text' },
-    },
-    label: function () {
-      return (this.name || 'HVAC');
-    },
-    oneditprepare: function () {
-      let node = this;
 
-      function toggleBackend() {
-        $("[id^=support-method]").hide();
-        $("#support-method-" + $("#node-config-input-method option:selected").val()).show();
-      }
+    const appliance = {
+        id: "",
+        host: "",
+        sn: "",
+        ssid: "",
+        port: "",
+        macAddress: "",
+        applianceType: 0xac,
+        applianceSubType: 0,
+        firmwareVersion: "",
+        newEncryptionVersion: true,
+        udpId: "",
+        key: "",
+        token:""
+    };
 
-      function toggleSelect() {
-        let $val = $("#node-config-input-chost").val();
-        $("#node-config-input-discover").html(`<i class="fa fa-search"></i>`);
-        $("#node-config-input-chost").off("change");
-        $("#node-config-input-chost").replaceWith(`<input type="text" id="node-config-input-chost" style="width: 100%;">`);
-        $("#node-config-input-chost").val($val);
-      }
+    let devices = [appliance];
 
-      function toggleInput(refresh = false) {
-        let $val = $("#node-config-input-chost").val();
-        let $username = $("#node-config-input-username").val();
-        let $password = $("#node-config-input-password").val();
+    RED.nodes.registerType('midea-hvac-config', {
+        category: 'config',
+        defaults: {
+            name: {},
+            method: {value: 'osk103'},
+            shost: {value: '',},
+            sport: {value: 23, validate: RED.validators.number()},
+            chost: {value: ''},
+            cport: {value: 6444, validate: RED.validators.number()},
+            polling: {value: 60, validate: RED.validators.number()},
+        },
+        credentials: {
+            username: {type: 'text'},
+            password: {type: 'password'},
+            id: {type: 'text'},
+            key: {type: 'text'},
+            token: {type: 'text'},
+        },
+        label: function () {
+            return (this.name || 'HVAC');
+        },
+        oneditprepare: function () {
+            let node = this;
 
-        if (refresh && (!$username || !$password)) {
-          RED.notify(`Empty Username or Password for Midea Cloud (MSmartHome App)`, "error");
-          return;
-        }
-
-        if (refresh) {
-          RED.notify(`Discover Midea HVAC devices ... (~10 sec)`);
-        }
-
-        $("#node-config-input-chost").prop("disabled", true);
-        $.post("midea-hvac/discover", {
-          nodeId: node.id,
-          username: $username,
-          password: $password,
-          refresh: refresh
-        }).done(function (devices) {
-          if (devices.length === 0) {
-            if (refresh) {
-              RED.notify(`No Midea HVAC devices found`, "error");
+            function toggleBackend() {
+                $("[id^=support-method]").hide();
+                $("#support-method-" + $("#node-config-input-method option:selected").val()).show();
             }
-            $("#node-config-input-chost").prop("disabled", false);
-            return;
-          }
 
-          if (typeof devices.error !== "undefined") {
-            RED.notify(devices.error, "error");
-            $("#node-config-input-chost").prop("disabled", false);
-            return;
-          }
+            function toggleSelect() {
+                let $val = $("#node-config-input-chost").val();
+                $("#node-config-input-discover").html(`<i class="fa fa-search"></i>`);
+                $("#node-config-input-chost").off("change");
+                $("#node-config-input-chost").replaceWith(`<input type="text" id="node-config-input-chost" style="width: 100%;">`);
+                $("#node-config-input-chost").val($val);
+            }
 
-          $("#node-config-input-discover").html(`<i class="fa fa-i-cursor"></i>`);
-          $("#node-config-input-chost").replaceWith(`<select id="node-config-input-chost" style="width: 100%;"></select>`);
-          devices.forEach(function (device) {
-            $("#node-config-input-chost").append(`<option value="${device.chost}" data-chost="${device.chost}" data-cport="${device.cport}" data-id="${device.id}" data-key="${device.key}" data-token="${device.token}">${device.chost} (${device.id})</option>`);
-          });
+            function toggleInput(refresh = false) {
+                let $val = $("#node-config-input-chost").val();
+                let $username = $("#node-config-input-username").val();
+                let $password = $("#node-config-input-password").val();
 
-          $("#node-config-input-chost").on("change", changeChost);
-          if (!$val || devices.length === 1) {
-            $val = devices[0].chost;
-          }
+                if (refresh && (!$username || !$password)) {
+                    RED.notify(`Empty Username or Password for Midea Cloud (MSmartHome App)`, "error");
+                    return;
+                }
 
-          $("#node-config-input-chost").val($val);
-          $("#node-config-input-chost").prop("disabled", false);
+                if (refresh) {
+                    RED.notify(`Discover Midea HVAC devices ... (~10 sec)`);
+                }
 
-          if ($val) {
-            changeChost();
-          }
-        });
-      }
+                if (devices.length === 0) {
+                    if (refresh) {
+                        RED.notify(`No Midea HVAC devices found`, "error");
+                    }
+                    $("#node-config-input-chost").prop("disabled", false);
+                    return;
+                }
 
-      function changeChost() {
-        let $chost = $("#node-config-input-chost option:selected");
+                if (typeof devices.error !== "undefined") {
+                    RED.notify(devices.error, "error");
+                    $("#node-config-input-chost").prop("disabled", false);
+                    return;
+                }
 
-        $("#node-config-input-cport").val($chost.data("cport"));
-        $("#node-config-input-id").val($chost.data("id"));
-        $("#node-config-input-key").val($chost.data("key"));
-        $("#node-config-input-token").val($chost.data("token"));
-      }
+                $("#node-config-input-discover").html(`<i class="fa fa-i-cursor"></i>`);
+                $("#node-config-input-chost").replaceWith(`<select id="node-config-input-chost" style="width: 100%;"></select>`);
+                devices.forEach(function (device) {
+                    $("#node-config-input-chost").append(`<option value="${device.chost}" data-chost="${device.chost}" data-cport="${device.cport}" data-id="${device.id}" data-key="${device.key}" data-token="${device.token}">${device.chost} (${device.id})</option>`);
+                });
 
-      $("#node-config-input-discover").click(function () {
-        if ($("#node-config-input-chost").prop("tagName") === "INPUT") {
-          toggleInput(true);
-        } else {
-          toggleSelect();
+                $("#node-config-input-chost").on("change", changeChost);
+                if (!$val || devices.length === 1) {
+                    $val = devices[0].chost;
+                }
+
+                $("#node-config-input-chost").val($val);
+                $("#node-config-input-chost").prop("disabled", false);
+
+                if ($val) {
+                    changeChost();
+                }
+
+            }
+
+            function changeChost() {
+                let $chost = $("#node-config-input-chost option:selected");
+
+                $("#node-config-input-cport").val($chost.data("cport"));
+                $("#node-config-input-id").val($chost.data("id"));
+                $("#node-config-input-key").val($chost.data("key"));
+                $("#node-config-input-token").val($chost.data("token"));
+            }
+
+            $("#node-config-input-discover").click(function () {
+                if ($("#node-config-input-chost").prop("tagName") === "INPUT") {
+                    toggleInput(true);
+                } else {
+                    toggleSelect();
+                }
+            });
+
+            setTimeout(function () {
+                toggleBackend();
+            }, 150);
+
+            setTimeout(function () {
+                toggleInput();
+            }, 250);
+
+            $("#node-config-input-method").change(function () {
+                toggleBackend();
+            });
         }
-      });
-
-      setTimeout(function () {
-        toggleBackend();
-      }, 150);
-
-      setTimeout(function () {
-        toggleInput();
-      }, 250);
-
-      $("#node-config-input-method").change(function () {
-        toggleBackend();
-      });
-    }
-  });
+    });
 </script>
 
 <script type="text/html" data-template-name="midea-hvac-config">
-  <div class="form-row">
-    <label for="node-config-input-name"><i class="fa fa-tag"></i> Name</label>
-    <input type="text" id="node-config-input-name" placeholder="Name">
-  </div>
-
-  <div class="form-row">
-    <label for="node-config-input-method"><i class="fa fa-cog"></i> Method</label>
-    <select id="node-config-input-method" style="width: 70%;">
-      <option value="serialbridge">serialbridge</option>
-      <option value="osk103">OSK103/SK103 (original Dongle)</option>
-    </select>
-  </div>
-
-  <div class="form-row">
-    <label for="node-config-input-polling"><i class="fa fa-clock-o"></i> Polling (sec)</label>
-    <input type="text" id="node-config-input-polling" placeholder="Polling">
-  </div>
-
-  <div id="support-method-serialbridge" style="display: none;">
     <div class="form-row">
-      <label for="node-config-input-shost"><i class="fa fa-globe"></i> Host</label>
-      <input type="text" id="node-config-input-shost" placeholder="Host">
+        <label for="node-config-input-name"><i class="fa fa-tag"></i> Name</label>
+        <input type="text" id="node-config-input-name" placeholder="Name">
     </div>
 
     <div class="form-row">
-      <label for="node-config-input-sport"><i class="fa fa-sign-in"></i> Port</label>
-      <input type="text" id="node-config-input-sport" placeholder="Port">
+        <label for="node-config-input-method"><i class="fa fa-cog"></i> Method</label>
+        <select id="node-config-input-method" style="width: 70%;">
+            <option value="serialbridge">serialbridge</option>
+            <option value="osk103">OSK103/SK103 (original Dongle)</option>
+        </select>
     </div>
-  </div>
 
-  <div id="support-method-osk103" style="display: none;">
     <div class="form-row">
-      <label for="node-config-input-chost"><i class="fa fa-globe"></i> Host</label>
-      <div style="display: inline-block; position: relative; width: 70%; height: 24px;">
-        <div style="position: absolute; left: 0; right: 42px;">
-          <input type="text" id="node-config-input-chost" style="width: 100%;" placeholder="Host">
+        <label for="node-config-input-polling"><i class="fa fa-clock-o"></i> Polling (sec)</label>
+        <input type="text" id="node-config-input-polling" placeholder="Polling">
+    </div>
+
+    <div id="support-method-serialbridge" style="display: none;">
+        <div class="form-row">
+            <label for="node-config-input-shost"><i class="fa fa-globe"></i> Host</label>
+            <input type="text" id="node-config-input-shost" placeholder="Host">
         </div>
-        <a id="node-config-input-discover" class="editor-button" style="position: absolute; right: 0; top: 0; width: 32px;"><i class="fa fa-search"></i></a>
-      </div>
+
+        <div class="form-row">
+            <label for="node-config-input-sport"><i class="fa fa-sign-in"></i> Port</label>
+            <input type="text" id="node-config-input-sport" placeholder="Port">
+        </div>
     </div>
 
-    <div class="form-row">
-      <label for="node-config-input-cport"><i class="fa fa-sign-in"></i> Port</label>
-      <input type="text" id="node-config-input-cport" placeholder="Port">
-    </div>
+    <div id="support-method-osk103" style="display: none;">
+        <div class="form-row">
+            <label for="node-config-input-chost"><i class="fa fa-globe"></i> Host</label>
+            <div style="display: inline-block; position: relative; width: 70%; height: 24px;">
+                <div style="position: absolute; left: 0; right: 42px;">
+                    <input type="text" id="node-config-input-chost" style="width: 100%;" placeholder="Host">
+                </div>
+                <a id="node-config-input-discover" class="editor-button"
+                   style="position: absolute; right: 0; top: 0; width: 32px;"><i class="fa fa-search"></i></a>
+            </div>
+        </div>
 
-    <hr align="middle">
-    <div class="form-row">
-      <label style="width:100%;"><span>Midea Cloud (MSmartHome App)</span></label>
-    </div>
+        <div class="form-row">
+            <label for="node-config-input-cport"><i class="fa fa-sign-in"></i> Port</label>
+            <input type="text" id="node-config-input-cport" placeholder="Port">
+        </div>
 
-    <div class="form-row">
-      <label for="node-config-input-username"><i class="fa fa-user"></i> Username</label>
-      <input type="text" id="node-config-input-username" placeholder="Username">
-    </div>
+        <hr align="middle">
+        <div class="form-row">
+            <label style="width:100%;"><span>Midea Cloud (MSmartHome App)</span></label>
+        </div>
 
-    <div class="form-row">
-      <label for="node-config-input-password"><i class="fa fa-lock"></i> Password</label>
-      <input type="password" id="node-config-input-password" placeholder="Password">
-    </div>
+        <div class="form-row">
+            <label for="node-config-input-username"><i class="fa fa-user"></i> Username</label>
+            <input type="text" id="node-config-input-username" placeholder="Username">
+        </div>
 
-    <div class="form-row">
-      <label for="node-config-input-id"><i class="fa fa-tasks"></i> Id</label>
-      <input type="text" id="node-config-input-id" placeholder="Id" disabled>
-    </div>
+        <div class="form-row">
+            <label for="node-config-input-password"><i class="fa fa-lock"></i> Password</label>
+            <input type="password" id="node-config-input-password" placeholder="Password">
+        </div>
 
-    <div class="form-row">
-      <label for="node-config-input-key"><i class="fa fa-tasks"></i> Key</label>
-      <input type="text" id="node-config-input-key" placeholder="Key" disabled>
-    </div>
+        <div class="form-row">
+            <label for="node-config-input-id"><i class="fa fa-tasks"></i> Id</label>
+            <input type="text" id="node-config-input-id" placeholder="Id" disabled>
+        </div>
 
-    <div class="form-row">
-      <label for="node-config-input-token"><i class="fa fa-tasks"></i> Token</label>
-      <input type="text" id="node-config-input-token" placeholder="Token" disabled>
-    </div>
+        <div class="form-row">
+            <label for="node-config-input-key"><i class="fa fa-tasks"></i> Key</label>
+            <input type="text" id="node-config-input-key" placeholder="Key" disabled>
+        </div>
 
-    <div class="form-tips"><b>Important:</b> deploy config node after discover</div>
-  </div>
+        <div class="form-row">
+            <label for="node-config-input-token"><i class="fa fa-tasks"></i> Token</label>
+            <input type="text" id="node-config-input-token" placeholder="Token" disabled>
+        </div>
+
+        <div class="form-tips"><b>Important:</b> deploy config node after discover</div>
+    </div>
 </script>
 
 <script type="text/html" data-help-name="midea-hvac-config">
-  <p>Connection to HVAC</p>
-  <h3>Configuration</h3>
-  <dl class="message-properties">
-    <dt class="optional">Name<span class="property-type">string</span></dt>
-    <dd>Choose any name to identify your node</dd>
-    <dt class="required">Method<span class="property-type">string</span></dt>
-    <dd>Select OSK103 or serialbridge</dd>
-    <dt class="optional">Polling<span class="property-type">string</span></dt>
-    <dd>Polling interval HVAC in sec</dd>
-    <dt class="required">Host<span class="property-type">string</span></dt>
-    <dd></dd>
-    <dt class="required">Port<span class="property-type">string</span></dt>
-    <dd></dd>
-  </dl>
+    <p>Connection to HVAC</p>
+    <h3>Configuration</h3>
+    <dl class="message-properties">
+        <dt class="optional">Name<span class="property-type">string</span></dt>
+        <dd>Choose any name to identify your node</dd>
+        <dt class="required">Method<span class="property-type">string</span></dt>
+        <dd>Select OSK103 or serialbridge</dd>
+        <dt class="optional">Polling<span class="property-type">string</span></dt>
+        <dd>Polling interval HVAC in sec</dd>
+        <dt class="required">Host<span class="property-type">string</span></dt>
+        <dd></dd>
+        <dt class="required">Port<span class="property-type">string</span></dt>
+        <dd></dd>
+    </dl>
 </script>
