Adding default device

--- a/nodes/config.html
+++ b/nodes/config.html
@@ -1,19 +1,19 @@
 <script type="text/javascript">
 
     const appliance = {
-        id: "",
-        host: "",
-        sn: "",
+        id: "30786325719110",
+        host: "192.168.4.244",
+        sn: "000000P0000000Q13C20938B84E40000",
         ssid: "",
-        port: "",
-        macAddress: "",
+        port: "6444",
+        macAddress: "3c:20:93:8b:84:e4",
         applianceType: 0xac,
         applianceSubType: 0,
-        firmwareVersion: "",
+        firmwareVersion: "4.0.4",
         newEncryptionVersion: true,
-        udpId: "",
-        key: "",
-        token:""
+        udpId: "00c2a166fd6720b2f5cdfa1938244b10",
+        key: "d82353c4ed584afd8958619aba6d8108003c554d1fbc4e719e878871e793fb48",
+        token:"2A9E4FCEFD156210489181F7A90870A583A5ECBF9F7281334F1AA41C7C977A215294446490F5D1370F754076D8CF0D0CFADBA9FA33AB420D47A8C43E90A67397"
     };
 
     let devices = [appliance];
